--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@supabase/supabase-js": "^2.93.3",
     "next": "^14.2.35",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.30",
