feat: Implement dividend data fetching, storage, and Vercel Cron integration with new API routes, Supabase service client, and external data source.

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,3 +3,9 @@ NEXT_PUBLIC_SUPABASE_URL=your-supabase-url
 
 # Supabase anon public key (safe for browser)
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Supabase service role key (server-only)
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
+
+# Vercel Cron secret (server-only)
+CRON_SECRET=your-cron-secret
