--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "zustand": "^4.5.0",
-    "yahoo-finance2": "^2.13.3"
+    "yahoo-finance2": "^3.13.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.19.30",
