--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^14.2.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "recharts": "^3.7.0",
     "yahoo-finance2": "^3.13.0",
     "zustand": "^4.5.0"
   },
